objects/Volunteer__c.object
<CustomObject>
    <fields>
        <fullName>Check_In_Time__c</fullName>
        <label>Check In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <label>Confirmation Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_ID__c</fullName>
        <label>Image ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(&quot;https://c.prerelna1.content.pre.force.com/sfc/servlet.shepherd/version/download/Image_ID__c&quot;, User__r.FirstName, 75, 92)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Volunteers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VolunteerEvent__c</fullName>
        <label>Volunteer Event</label>
        <referenceTo>VolunteerEvent__c</referenceTo>
        <relationshipLabel>Volunteers</relationshipLabel>
        <relationshipName>Volunteers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Volunteer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Volunteer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>